# libcf

./: Makefile.am  Makefile.in  README.md  acinclude.m4  aclocal.m4  cf_config.h  cf_config.h.in  circle.yml  configure  configure.ac  nfconfig.in  setup.py.in
.circleci/: config.yml
ci-support/: conda_upload.sh
examples/: Makefile.am  Makefile.in  ex2.c  ex3.c  ex_create_cube_grids.c  ex_create_lonlat.c  ex_create_static_data.c  ex_create_time_data.c  ex_fortran_interface.f90  ex_subset.c  examples.h  exparinterp.c
gridspec_api/: Makefile.am  Makefile.in  libcf_gridspec.h
gridspec_api/axis/: Makefile.am  Makefile.in  nccf_axis.h  tst_axis.c
gridspec_api/coord/: Makefile.am  Makefile.in  nccf_coord.h  nccf_def_coord.c  nccf_inq_coord_bound.c  tst_1d_boundary_slice.c  tst_bound1.c  tst_lon.c  tst_lonlat.c  tst_lonlat_from_axes.c
gridspec_api/data/: Makefile.am  Makefile.in  tst_nccf_def_SD_from_grid.c  tst_statdata.c  tst_timedata.c
gridspec_api/global/: Makefile.am  Makefile.in  tst_global.c
gridspec_api/grid/: Makefile.am  Makefile.in  nccf_def_grid.c  nccf_detect_grid_periodicity.c  nccf_grid.h  tst_1d_grid.c  tst_bipolar_tripolar_grid.c  tst_cubesphere_makegrid.c  tst_struct_grid_latlon.c
gridspec_api/host/: Makefile.am  Makefile.in  nccf_def_host_from_file.c  nccf_inq_host_statfileindex.c  nccf_inq_host_timefileindex.c  tst_cube_sphere_multi_dims_in_file.c  tst_cube_sphere_multi_var.c  tst_get_host_three_tile.c  tst_nccf_add_host.c  tst_nccf_def_host.c  tst_nccf_def_host_from_file.c  tst_real_data_case.c  tst_three_tile_cubed_sphere.c
gridspec_api/mosaic/: Makefile.am  Makefile.in  copy_grid_for_bogus_data_files.sh  nccf_compute_mosaic_contacts.c  nccf_inq_mosaic_gridranges.c  tst_1d_mosaic.c  tst_big_dimsizes.c  tst_bipolar_tripolar_grid.c  tst_bipolar_tripolar_grid_periodic.c  tst_cubesphere_mosaic.c  tst_cubesphere_mosaic_grid_ranges.c  tst_get_mosaic_grid_ranges.c  tst_nccf_set_mosaic_contact.c  tst_periodic_grid.c  tst_rotation.c  tst_sg_mosaic_latlon.c  tst_sg_periodic_mosaic_latlon.c  tst_tripolar_zhi.c  tst_two_tiles.c  tst_two_unequal_in_i_j_tiles.c  tst_two_unequal_in_i_tiles.c
gridspec_api/regrid/: Makefile.am  Makefile.in  nccf_apply_regrid_type.h  tst_cubesphere_to_lonlat_regrid.c  tst_lonlat_regrid.c  tst_lonlat_to_lonlat_regrid.c  tst_mask.c  tst_mask2.c  tst_periodic.c  tst_periodic2.c  tst_periodic3.c  tst_put_and_def_from_file.c  tst_slanted_lonlat_regrid.c  tst_tripolar_to_lonlat_regrid.c  tst_tripolar_to_lonlat_regrid_from_weights.c
include/: Makefile.am  Makefile.in  cflistitem.h  nccf_utility_functions.h
pycf/: Makefile.am  Makefile.in  __init__.py.in  generateLibCFConfig.py  libCFConfig.py
recipe/: build.sh  meta.yaml.in
scripts/: circleci_mac.sh  circleci_mac_dep.sh
src/: Makefile.am  Makefile.in  cffcvars.f90  nccf_find_indices.h  nccf_find_next_indices.h  nccf_get_linear_weights.h  nccf_get_position.h  nccf_keyvalue.c  nccf_linear_interp.h  nccf_linear_interp_mod.h  nccf_solve.h  tst_coords.c  tst_cvars.c  tst_example_data.c  tst_files.c  tst_linear_interp.c  tst_listitem.c  tst_nccf_find_adjacent.c  tst_nccf_generate_id.c  tst_nccf_get_bipolar_cap.c  tst_nccf_get_cubedsphere_grid.c  tst_nccf_get_flat_index.c  tst_nccf_get_tripolar_grid.c  tst_nccf_get_tripolar_halfgrid.c  tst_nccf_index2vector.c  tst_nccf_keyvalue.c  tst_nccf_linear_interp_mask.c  tst_nccf_varObj.c  tst_princeton.c  tst_solve.c  tst_subsets.c  tst_vars.c  tst_vert.c
