#
# $Id: Makefile.am 827 2011-09-14 14:04:16Z pletzer $
#

AM_CPPFLAGS = -I$(top_srcdir)/gridspec_api				\
-I$(top_srcdir)/gridspec_api/global -I$(top_srcdir)/gridspec_api/coord	\
-I$(top_srcdir)/gridspec_api/grid -I$(top_srcdir)/gridspec_api/data	\
-I$(top_srcdir)/gridspec_api/regrid					\
-I$(top_srcdir)/gridspec_api/mosaic -I$(top_srcdir)/gridspec_api/host	\
-I$(top_srcdir)/src -I$(top_srcdir)/include

EXTLIBS = -lnetcdf

noinst_PROGRAMS = ex2 ex3 ex_subset
if HAVE_MPI
noinst_PROGRAMS += exparinterp
endif

if HAVE_FORTRAN_2003
noinst_PROGRAMS += ex_fortran_interface
endif

LIBCF_LIBS =                                                    \
$(top_builddir)/gridspec_api/host/libnccf_host.la	        \
$(top_builddir)/gridspec_api/mosaic/libnccf_mosaic.la		\
$(top_builddir)/gridspec_api/regrid/libnccf_regrid.la		\
$(top_builddir)/gridspec_api/data/libnccf_data.la		\
$(top_builddir)/gridspec_api/grid/libnccf_grid.la		\
$(top_builddir)/gridspec_api/coord/libnccf_coord.la		\
$(top_builddir)/gridspec_api/global/libnccf_global.la		\
$(top_builddir)/src/libcf_src.la 

ex2_SOURCES = ex2.c  ex_create_cube_grids.c ex_create_static_data.c \
ex_create_time_data.c ex_create_lonlat.c examples.h
ex2_LDADD = $(LIBCF_LIBS) $(EXTLIBS)

ex3_SOURCES = ex3.c examples.h
ex3_LDADD = $(LIBCF_LIBS) $(EXTLIBS)

if HAVE_MPI
exparinterp_SOURCES = exparinterp.c ex_create_lonlat.c examples.h
exparinterp_LDADD = $(LIBCF_LIBS) $(EXTLIBS)
endif

ex_subset_SOURCES = ex_subset.c
ex_subset_LDADD = $(LIBCF_LIBS) $(EXTLIBS)

if HAVE_FORTRAN_2003
ex_fortran_interface_SOURCES = ex_fortran_interface.f90
ex_fortran_interface_LDADD = $(LIBCF_LIBS) $(EXTLIBS)
endif

# files generated by tests
CLEANFILES = *.nc
