## This is a automake file, part of Unidata's libCF package.
# Copyright 2010, see the COPYRIGHT file for more information.
# $Id: Makefile.am 662 2011-04-01 16:31:45Z pletzer $

# This automake file generates the Makefile to build the include
# directory.

include_HEADERS = libcf_src.h \
cflistitem.h \
nccf_varObj.h \
nccf_utility_functions.h \
nccf_constants.h \
nccf_handle_error.h \
nccf_errors.h \
libcf.h

noinst_HEADERS = cferror.h nc_tests.h


