#
# $Id: Makefile.am 824 2011-09-13 18:38:07Z dkindig $
#

AM_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/include	\
-I$(srcdir)/../coord -I$(srcdir)/../grid -I$(srcdir)/../global	\
-I$(srcdir)/../data -I$(srcdir)/../mosaic -I$(srcdir)/../axis

include_HEADERS = nccf_host.h

noinst_LTLIBRARIES = libnccf_host.la
libnccf_host_la_SOURCES = nccf_def_host.c nccf_def_host_from_file.c	\
nccf_free_host.c nccf_put_host.c nccf_add_host_file.c			\
nccf_inq_host_mosaicfilename.c			                        \
nccf_inq_host_statfilename.c nccf_inq_host_timefilename.c		\
nccf_inq_host_ntimeslices.c nccf_inq_host_ntimedatafiles.c	        \
nccf_inq_host_nstatdatafiles.c nccf_inq_host_ngrids.c			\
nccf_inq_host_gridfilename.c nccf_inq_host_gridname.c			\
nccf_inq_host_struct_grid_ids.c nccf_inq_host_statdataids.c		\
nccf_inq_host_timedataids.c nccf_def_host_data.c                        \
nccf_inq_host_statfileindex.c nccf_inq_host_timefileindex.c

INTLIBS = libnccf_host.la ../mosaic/libnccf_mosaic.la	\
../data/libnccf_data.la ../grid/libnccf_grid.la		\
../global/libnccf_global.la ../coord/libnccf_coord.la	\
../../src/libcf_src.la

EXTLIBS = -lnetcdf

noinst_PROGRAMS = tst_nccf_add_host tst_real_data_case

check_PROGRAMS = tst_nccf_def_host tst_three_tile_cubed_sphere	\
tst_nccf_def_host_from_file tst_cube_sphere_multi_var		\
tst_cube_sphere_multi_dims_in_file tst_get_host_three_tile

tst_nccf_def_host_SOURCES = tst_nccf_def_host.c 
tst_nccf_def_host_LDADD = $(INTLIBS) $(EXTLIBS)

tst_nccf_add_host_SOURCES = tst_nccf_add_host.c 
tst_nccf_add_host_LDADD = $(INTLIBS) $(EXTLIBS)

tst_three_tile_cubed_sphere_SOURCES = tst_three_tile_cubed_sphere.c 
tst_three_tile_cubed_sphere_LDADD = $(INTLIBS) $(EXTLIBS)

tst_nccf_def_host_from_file_SOURCES = tst_nccf_def_host_from_file.c 
tst_nccf_def_host_from_file_LDADD = $(INTLIBS) $(EXTLIBS)

tst_cube_sphere_multi_var_SOURCES = tst_cube_sphere_multi_var.c
tst_cube_sphere_multi_var_LDADD = $(INTLIBS) $(EXTLIBS)

tst_get_host_three_tile_SOURCES = tst_get_host_three_tile.c 
tst_get_host_three_tile_LDADD = $(INTLIBS) $(EXTLIBS)

tst_real_data_case_SOURCES = tst_real_data_case.c 
tst_real_data_case_LDADD = $(INTLIBS) $(EXTLIBS)

tst_cube_sphere_multi_dims_in_file_SOURCES = tst_cube_sphere_multi_dims_in_file.c
tst_cube_sphere_multi_dims_in_file_LDADD = $(INTLIBS) $(EXTLIBS)

# files generated by tests
CLEANFILES = *.nc *.pt

TESTS = $(check_PROGRAMS)
